# psy_parallel

./: .gitignore  README.md  example.c  psy_parallel.h
.github/workflows/: ci.yml
bindings/mex/: README.md  build.m  example.m  psy_parallel_mex.c
bindings/python/: README.md  example.py  psy_parallel_ext.c  pyproject.toml  setup.py
